fix(input): Fix label position with alignement

--- a/src/app/public/public.component.scss
+++ b/src/app/public/public.component.scss
@@ -2,7 +2,8 @@
 
 .buttons,
 .inputs,
-.checkboxes {
+.checkboxes,
+.labels {
     display: flex;
     flex-direction: column;
     flex-wrap: wrap;
